2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(removeDomainMarker(Marker)): New method,
	(removeDomainMarker(Marker, Layer)): Likewise,
	(removeDomainMarker(int, Marker, Layer)): Likewise,
	(removeRangeMarker(Marker)): New method,
	(removeRangeMarker(Marker, Layer)): Likewise,
	(removeRangeMarker(int, Marker, Layer)): Likewise.

2007-10-31  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/DefaultKeyedValues.java
	(data): Removed,
	(keys): New field,
	(values): Likewise,
	(indexMap): New field,
	(DefaultKeyedValues): Initialise new fields,
	(getItemCount): Use new data fields,
	(getValue(int)): Likewise,
	(getKey(int)): Likewise,
	(getIndex(Comparable)): Likewise,
	(getKeys): Likewise,
	(setValue(Comparable, Number)): Likewise,
	(insertValue): Likewise,
	(rebuildIndex): Likewise,
	(removeValue): Likewise,
	(clear): Likewise,
	(sortByKeys): Likewise,
	(sortByValue): Likewise,
	(hashCode): Likewise,
	(clone): Likewise.
	
2007-10-31  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/ComparableObjectSeries.java
	(hashCode): Faster implementation,
	* source/org/jfree/data/time/TimeSeries.java
	(hashCode): Likewise,
	* source/org/jfree/data/xy/XYSeriesTests.java
	(hashCode): Likewise.

2007-10-29  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/SimpleDialFrame.java: 
	Renamed StandardDialFrame.java.

2007-10-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
	(linesVisible): Deprecated,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(getLinesVisible): Likewise,
	(setLinesVisible): Likewise,
	(getShapesVisible): Likewise,
	(setShapesVisible): Likewise,
	(setShapesFilled): Likewise.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java: